--- a/RPSGameTests/RPSGameTests.csproj
+++ b/RPSGameTests/RPSGameTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Rock-Paper-Scissors\RPSGame.csproj" />
+  </ItemGroup>
+
 </Project>
